dropshot/tests/fail/bad_trait_only22.stderr
error: missing field `url`
  --> tests/fail/bad_trait_only22.rs:17:33
   |
17 |                 external_docs = {}
   |                                 ^^
